# SimSys_Scripts

./: .gitignore  CONTRIBUTORS.md  pyproject.toml  suite_report.py
.github/: pull_request_template.md
.github/workflows/: cla-check.yaml  lint.yml  python_unit_tests.yaml  trigger-project-workflow.yaml
compiler_warning_checker/: parse_warnings.py
github_scripts/: get_git_sources.py
kgo_updates/: meto_update_kgo.sh
kgo_updates/kgo_update/: meto_run_kgo_script.sh
lfric_macros/: apply_macros.py  check_macro_chains.py  release_lfric.py  validate_rose_meta.py
lfric_macros/tests/: test_apply_macros.py
nightly_testing/: retrigger_nightlies.py
sbin/: gh_manage_labels  tagman
script_umdp3_checker/: umdp3_conformance.py  umdp3_rules_S3.py
script_umdp3_checker/tests/: test_umdp3_conformance.py  test_umdp3_rules_S3.py
