[project]
name = "simsys_scripts"
version = "2026.07.1"
description = "Development support scripts for Simulation Systems deployment"
readme = "README.md"
license = { file = "LICENCE" }
requires-python = ">=3.12"

dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "networkx",
    "PyYAML"
]

[project.urls]
repository = "https://github.com/MetOffice/SimSys_Scripts"
discussion = "https://github.com/MetOffice/simulation-systems/discussions/categories/lfric"

[tool.setuptools]
packages = []
